Revision history for perl distribution App-proxyforurl

0.13 Not Released
 - Changed GET /gethostbyname to POST /v1/gethostbyname
 - Changed GET /within to POST /v1/is-in-net
 - Rewrote JavaScript

0.12 2021-12-14T19:16:57+0900
 - Fix correct quotes for pure-min.css

0.11 2021-10-20T13:27:26+0900
 - Skip test for CPAN smokers

0.10 2021-10-06T08:11:17+0900
 - Need to check $? instead of $! if gethostbyname fails #5

0.09 2021-08-28T16:47:03+0200
 - Fix demo link in documentation #4

0.08 2021-06-17T09:10:12+0900
 - Add support for X-Request-Base
 - Compatible with Mojolicious 9.11

0.07 2018-03-03T15:33:27+0100
 - Fix pure-min.css URL
 - Fix loading application in tests

0.06 2016-12-11T09:53:45+0100
 - Fix dnsDomainIs() should not use a regex matcher #2

0.05 2016-11-13T18:02:19+0100
 - Fix dnsDomainIs() for domains containing dot "." #1

0.04 2016-04-17T11:34:41+0200
 - Fix dnsDomainIs() test

0.03 2015-08-10T15:47:47+0200
 - Fix isPlainHostName() test

0.02 2015-08-09T18:30:45+0200
 - Fix link to demo
 - More padding between form fields
 - Bigger editor

0.01 2015-08-09T18:10:51+0200
 - Add script/proxyforurl